--- a/test4a.html
+++ b/test4a.html
@@ -11,7 +11,7 @@
 
 
 <div id="header" style="background-color: #FACC2E">
-<p align="left"><b><font size="7" color="white">for the learning of mathematics</font></b></p>
+<b><font size="7" color="white">for the learning of mathematics</font></b>
 <p align="left">an international journal of mathematics education</p>
 <p><p><button style="background-color:#A7D4E9 ;width:100;height:22;" onclick="parent.location='http://flm-journal.org/Articles/1852283E7E221DAF337B5E97DD61F3.pdf'">article PDF</button>
 <button style="background-color:#A7D4E9 ;width:100;height:22;" onclick="parent.location='http://flm-journal.org'">browse journal</button>
