--- a/test4a.html
+++ b/test4a.html
@@ -13,11 +13,14 @@
 <div id="header" style="background-color: #FACC2E">
 <b><font size="7" color="white">for the learning of mathematics</font></b>
 <p align="left">an international journal of mathematics education</p>
-  <p><p></p><button style="background-color:#A7D4E9 ;width:100;height:22;" onclick="parent.location='http://flm-journal.org/Articles/1852283E7E221DAF337B5E97DD61F3.pdf'">article PDF</button>
+<p><p></p>
+<div id="buttons"> 
+<button style="background-color:#A7D4E9 ;width:100;height:22;" onclick="parent.location='http://flm-journal.org/Articles/1852283E7E221DAF337B5E97DD61F3.pdf'">article PDF</button>
 <button style="background-color:#A7D4E9 ;width:100;height:22;" onclick="parent.location='http://flm-journal.org'">browse journal</button>
 <button style="background-color:#A7D4E9 ;width:100;height:22;" onclick="parent.location='http://flm-journal.org/index.php?do=subscribe_to_flm&lang=en'">subscribe</button>
 <button style="background-color:#A7D4E9 ;width:100;height:22;" onclick="parent.location='http://flm-journal.org/index.php?do=contact&lang=en'">contact</button>
 <hr size="10" ALIGN="LEFT" COLOR="black" WIDTH="100%">
+</div>
 </div>
 
 <body>
