--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <!--<a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_posts();">{{ site.posts_btn }}</a>-->
   <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_projects();">{{ site.projects_btn }}</a>
 </div>
-<!-- <div id="posts">
+-- <div id="posts">
 
   <h2 class="my-mini-heading">{{ site.posts_btn }}</h2>
 
@@ -30,7 +30,7 @@ layout: default
     <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
   </div>
 </div>
--->
+
 
 <div id="projects">
   <h2 class="my-mini-heading">{{ site.projects_btn }}</h2>
