--- a/farrugiaarticle.html
+++ b/farrugiaarticle.html
@@ -232,7 +232,7 @@ tool, may be generated, and evolve, under the guidance of the expert (    <em>i.
 </p>
 
 <div id= "image1">
-<img src="farrugia1.png" >
+<img src="Farrugia1.png" >
 </div>
 
 <p>
@@ -241,7 +241,7 @@ tool, may be generated, and evolve, under the guidance of the expert (    <em>i.
 
 
 <div id= "image1">
-<img src="farrugia2.png">
+<img src="Farrugia2.png">
 </div>
 
 <p>
@@ -553,7 +553,7 @@ used to represent the movement (<em>e.g.,</em> 6 – 4 = 2) and thus to    <em> 
 </p>
 <p>
 <div id= "image1">
-<img src="farrugia3.png" >
+<img src="Farrugia3.png" >
 </div>
 </p>
 <p>
