--- a/farrugiaarticle.html
+++ b/farrugiaarticle.html
@@ -47,8 +47,7 @@
 </p>
 <p>
     <em>MTF</em>
-    <em>[P</em>
-    <em>laces frog above the number 1 on class line]</em>
+    <em>[Places frog above the number 1 on class line]</em>
     He didn’t go very far! <em>[Laughs] </em>Now let’s see what Giannis is
     going to say <em>[pause]</em>
 </p>
@@ -59,7 +58,7 @@
 </p>
 <p>
     <em>MTF</em>
-He jumps back <em>[pause] </em>Two?! <em>[</em>    <em>Puts out two fingers]</em> Let’s see what happens if Freddie jumps back
+He jumps back <em>[pause] </em>Two?! <em>[Puts out two fingers]</em> Let’s see what happens if Freddie jumps back
     two. One, two! <em>[</em>
     <em>
         Moves frog back one jump, then another. Mimics the frog falling half
@@ -81,18 +80,16 @@ He jumps back <em>[pause] </em>Two?! <em>[</em>    <em>Puts out two fingers]</em
 </p>
 <p>
     <em>Sven</em>
-    He fell off! <em>[Sm</em><em>iles]</em>
+    He fell off! <em>[Smiles]</em>
 </p>
 <p>
     <em>Children</em>
-    <em>[S</em>
-    <em>mile]</em>
+    <em>[Smile]</em>
     He falls off / he fell off.
 </p>
 <p>
     <em>Dragan</em>
-    <em>[</em>
-    <em>Smiles]</em>
+    <em>[Smiles]</em>
     He jumped in the water.
 </p>
 <p>
