--- a/index.html
+++ b/index.html
@@ -1,88 +1,195 @@
----
-layout: default
----
-<script src="{{ "/styles/index.js" | prepend: site.baseurl }}"></script>
-<div>
-  <!--<a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_posts();">{{ site.posts_btn }}</a>-->
-  <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_projects();">{{ site.projects_btn }}</a>
-</div>
--- <div id="posts">
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-  <h2 class="my-mini-heading">{{ site.posts_btn }}</h2>
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Mark Porter</title>
+  <meta name="description" content="Mark Porter's Porfolio">
+  <meta name="author" content="Mark Porter">
 
-  <ul>
-    {% for post in site.posts %}
-    <li>
-      <p class="my-item">
-        <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
-        <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span>
-      </p>
-    </li>
-    {% endfor %}
-    <li>
-      <p class="my-item">
-        <a href="{{ "/feed.xml" | prepend: site.baseurl }}" class="my-link">RSS</a> / <a href="{{ "/atom.xml" | prepend: site.baseurl }}" class="my-link">ATOM</a><br>
-        <span class="my-item-sub"><i class="fa fa-rss" aria-hidden="true"></i> {{ site.rss_badge }}</span>
-    </li>
-  </ul>
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <div>
-    <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+    <!-- Scripts
+   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+   <script src="https://unpkg.com/packery@2/dist/packery.pkgd.min.js"></script>
+
+   <script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="grid">
+    <div class="grid-item grid-item--width2 grid-item--height2" style="padding: 30px">
+      Welcome! 
+      <br><br>
+      I am Mark Porter and this is my portfolio.
+      <br><br>
+      I am a front-end web developer and designer. 
+      <br><br>
+      Here are some of my projects, feel free to rearrange them if you like!
+      <br><br>
+      Here is my <a href="/resume.pdf"> resume</a>
+    </div>
+  <a href="https://potteryband.com">
+    <div class="grid-item grid-item--height2">
+      <div class="project-item">
+        <img src="images/bobbys_motel.png" style="position:absolute; bottom: 0;" alt="Bobby's Motel logo" class="image">
+        <div class="overlay">
+          <div class="text">Custom website built for Pottery for their album Bobby's Motel</div>
+        </div>
+      </div>
+    </div>
+  </a>
+  <a href="https://canta.xyz">
+    <div class="grid-item grid-item--width2">
+      <div class="project-item">
+        <img src="images/canta.png" alt="Canata Logo" class="image">
+        <div class="overlay">
+          <div class="text">Custom website built for çanta bags using cargo.site</div>
+        </div>
+      </div>
+    </div>
+  </a>
+
+    <a href="https://xd.adobe.com/view/cc163805-2082-4c9d-52c9-ecd2f2aed596-ba27/?fullscreen">
+    <div class="grid-item grid-item--width2 grid-item--height2" href="https://xd.adobe.com/view/cc163805-2082-4c9d-52c9-ecd2f2aed596-ba27/?fullscreen">
+      <div class="project-item">
+        <img src="images/path2class@2x.png" style="padding:30px;" alt="Path to class logo" class="image">
+        <div class="overlay">
+          <div class="text">High fidelity mockup of a locative media app inspired by Erving Goffman's "nod line"</div>
+        </div>
+      </div>
+    </div>
+  </a>
+  <a href="https://github.com/markzporter">
+    <div class="grid-item ">
+      <div class="project-item">
+        <img src="images/GitHub-Mark-120px-plus.png" style="padding: 30px;" alt="Github Logo" class="image">
+        <div class="overlay">
+          <div class="text"></div>
+        </div>
+      </div>
+    </div>
+  <a href="https://dmgblockchain.com/walletscore">
+    <div class="grid-item">
+      <div class="project-item">
+        <div class="text">Walletscore</div>
+        <div class="overlay">
+          <div class="text">A blockchain analysis visualisation anti money laundering tool</div>
+        </div>
+      </div>
+    </div>
+  </a>
+  <a href="https://plotly.com/dash/design-kit/">
+    <div class="grid-item grid-item--width2">
+      <div class="project-item">
+        <img src="images/plotly.png" style="width: 100%" alt="Plotly Logo" class="image">
+        <div class="overlay">
+          <div class="text">
+            A data visualisation UI Kit 
+          </div>
+        </div>
+      </div>
+    </div>
+</a>
+  <a href="https://medium.com/@markzporter/fine-449-final-blog-post-b038fc79a2b">
+    <div class="grid-item ">
+      <div class="project-item">
+        <img src="images/fiv_logo.png" style="padding: 30px;" alt="FiV Logo" class="image">
+        <div class="overlay">
+          <div class="text">User interface research project for CS 449</div>
+        </div>
+      </div>
+    </div>
+  </a>
+  <a href="https://www.linkedin.com/in/markzporter/">
+    <div class="grid-item">
+      <div class="project-item">
+        <img src="images/LI-In-Bug.png" style="padding: 30px;" alt="Linkedin Logo" class="image">
+        <div class="overlay">
+          <div class="text"></div>
+        </div>
+      </div>
+    </div>
+
+  <!--
+  <a href="https://github.com/markzporter/hyperledger-hackathon">
+    <div class="grid-item ">
+      <div class="project-item">
+        <div class="text">FuzzLedger</div>
+        <div class="overlay">
+          <div class="text">Hackathon blockchain for criminal record keeping  </div>
+        </div>
+      </div>
+    </div>
+  </a>  
+  <a href="https://github.com/markzporter/nwhacks2019">
+    <div class="grid-item ">
+      <div class="project-item">
+        <div class="text">EasySpeak</div>
+        <div class="overlay">
+          <div class="text">Second language english learning tool</div>
+        </div>
+      </div>
+    </div>
+  </a>
+  <a href="https://github.com/markzporter/poker-game">
+    <div class="grid-item ">
+      <div class="project-item">
+        <div class="text">Poker Game</div>
+        <div class="overlay">
+          <div class="text">Poker game can play against the computer</div>
+        </div>
+      </div>
+    </div>
+  </a>
+  <a href="https://github.com/markzporter/applet-animation">
+    <div class="grid-item ">
+      <div class="project-item">
+        <div class="text">Galaga animation</div>
+        <div class="overlay">
+          <div class="text">Animated Galaga game simulation</div>
+        </div>
+      </div>
+    </div>
+  </a>
   </div>
-</div>
+ -->
 
+  <script>
+    var pckry = new Packery( '.grid', {
+      itemSelector: '.grid-item',
+      columnWidth: 100
+      });
 
-<div id="projects">
-  <h2 class="my-mini-heading">{{ site.projects_btn }}</h2>
-  <ul>
-    {% for project in site.data.projects %}
-    <li>
-      <p class="my-item"><a href="{{ project.link }}" class="my-link">{{ project.name }}</a><br>
-        <span class="my-item-sub">
-        {{ project.description }}
-      </span>
-      </p>
-    </li>
-    {% endfor %}
-  </ul>
-  <div>
-    <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
-  </div>
-</div>
+  pckry.getItemElements().forEach( function( itemElem ) {
+    var draggie = new Draggabilly( itemElem );
+    pckry.bindDraggabillyEvents( draggie );
+  });
 
-<noscript>
-  <div id="posts-noscript">
+</script>
+</head>
 
-    <h2 class="my-mini-heading">{{ site.posts_btn }}</h2>
-
-    <ul>
-      {% for post in site.posts %}
-      <li>
-        <p class="my-item">
-          <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
-          <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span>
-        </p>
-      </li>
-      {% endfor %}
-      <li>
-        <p class="my-item">
-          <a href="{{ "/feed.xml" | prepend: site.baseurl }}" class="my-link">RSS</a> / <a href="{{ "/atom.xml" | prepend: site.baseurl }}" class="my-link">ATOM</a><br>
-          <span class="my-item-sub"><i class="fa fa-rss" aria-hidden="true"></i> {{ site.rss_badge }}</span>
-      </li>
-    </ul>
-  </div>
-  <div id="projects-noscript">
-    <h2 class="my-mini-heading">{{ site.projects_btn }}</h2>
-    <ul>
-      {% for project in site.data.projects %}
-      <li>
-        <p class="my-item"><a href="{{ project.link }}" class="my-link">{{ project.name }}</a><br>
-          <span class="my-item-sub">
-        {{ project.description }}
-      </span>
-        </p>
-      </li>
-      {% endfor %}
-    </ul>
-  </div>
-</noscript>
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+</html>
