--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <br><br>
       Here are some of my projects, feel free to rearrange them if you like!
       <br><br>
-      Here is my <a href="/resume.pdf"> resume</a>
+      Here is my <a href="resume.pdf"> resume</a>
     </div>
   <a href="https://potteryband.com">
     <div class="grid-item grid-item--height2">
@@ -62,7 +62,7 @@
   <a href="https://canta.xyz">
     <div class="grid-item grid-item--width2">
       <div class="project-item">
-        <img src="images/canta.png" alt="Canata Logo" class="image">
+        <img src="images/canta.png" alt="Canta Logo" class="image">
         <div class="overlay">
           <div class="text">Custom website built for çanta bags using cargo.site</div>
         </div>
